fix popup width on mobile

--- a/src/elements/css/style.css
+++ b/src/elements/css/style.css
@@ -353,3 +353,9 @@ button {
 .masterCard {
     width: 30%;
 }
+
+@media only screen and (max-width: 1200px) {
+    .popup {
+        width: 90%;
+    }
+}
